fix: layout issues, pieces visibility behavior, chess board unmounting due to tabs

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -76,7 +76,8 @@
 }
 
 .g-board img {
-  transition: opacity 1s;
+  transition-duration: 0.5s;
+  transition-property: opacity;
 }
 
 .g-hide-notations [class^='notation'] {
